--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-gd": "^7.3",
         "dimsav/laravel-translatable": "^9.4",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "mcamara/laravel-localization": "^1.3",
-        "santigarcor/laratrust": "5.0.*",
-        "gd": "*",
+        "santigarcor/laratrust": "5.0.*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
